--- a/templates/upload.html
+++ b/templates/upload.html
@@ -114,6 +114,11 @@
             placeholder="0"
             step="0.001"
             data-inclusive-min="False"
+            required
+            data-toggle="tooltip"
+            data-trigger="manual"
+            data-placement="top"
+            data-title="Epsilon cannot be 0!"
           />
         </div>
       </div>
@@ -147,6 +152,11 @@
             step="0.1"
             style="border-right: none;"
             data-inclusive-min="False"
+            reqiured
+            data-toggle="tooltip"
+            data-trigger="manual"
+            data-placement="top"
+            data-title="Delta cannot be 0!"
           />
           <div class="input-group-append">&times;10<sup>-4</sup></div>
         </div>
@@ -179,6 +189,7 @@
             max="1"
             placeholder="0"
             step="0.01"
+            required
           />
         </div>
       </div>
