--- a/templates/dpml.html
+++ b/templates/dpml.html
@@ -195,6 +195,62 @@ Learning {% endblock %} {% block formFields %}
     </div>
   </div>
 </section>
+<section
+  class="parameter-section"
+  id="learning-parameters"
+  data-hide="logreg kMeans"
+>
+  <header class="section-header">
+    <h6>Bounds</h6>
+  </header>
+  <div>
+    <div class="form-row my-4 justify-content-around">
+      <div class="col-auto my-3">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="upper-bound" class="input-group-text">Upper</label>
+          </div>
+          <input
+            type="number"
+            class="form-control"
+            id="upper-bound"
+            placeholder="0"
+            required
+          />
+        </div>
+      </div>
+      <div class="col-auto my-3">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="lower-bound" class="input-group-text">Lower</label>
+          </div>
+          <input
+            type="number"
+            class="form-control"
+            id="lower-bound"
+            required
+            placeholder="0"
+          />
+        </div>
+      </div>
+      <div class="col-12"></div>
+      <div class="col-auto my-3">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="dimensions" class="input-group-text">Dimensions</label>
+          </div>
+          <input
+            type="number"
+            class="form-control"
+            id="dimensions"
+            required
+            placeholder="0"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %} {% block analysisScript %}
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -226,6 +282,9 @@ Learning {% endblock %} {% block formFields %}
     var epochs = document.getElementById("epochs").value;
     var alpha = document.getElementById("alpha").value;
     var split = document.getElementById("split").value;
+    upper_bound = $("#upper-bound").val();
+    lower_bound = $("#lower-bound").val();
+    dimensions = $("#dimensions").val();
     if (!$(".upload-form")[0].checkValidity()) {
       console.log("false");
       $(".upload-form").addClass("was-validated");
@@ -301,10 +360,16 @@ Learning {% endblock %} {% block formFields %}
         degree +
         "&epochs=" +
         epochs +
+        "&alpha=" +
+        alpha +
         "&split=" +
         split +
-        "&alpha=" +
-        alpha,
+        "&upper=" +
+        upper_bound +
+        "&lower=" +
+        lower_bound +
+        "&dimensions=" +
+        dimensions,
       true
     );
     xhttp.send();
