--- a/templates/form.html
+++ b/templates/form.html
@@ -109,7 +109,7 @@ endblock %} {% block content %}
           </div>
           <img id="data-histogram" />
         </div>
-        <div class="data-weights" data-hide="visual">
+        <div class="data-weights text-center" data-hide="visual">
           <div class="weights"></div>
           <div class="training-accuracy py-2"></div>
           <div class="test-accuracy py-2"></div>
@@ -119,5 +119,5 @@ endblock %} {% block content %}
   </div>
 </section>
 {% endblock %} {% block scripts %}
-<script type="text/javascript" src="/static/js/action.js"></script
->{% block analysisScript %} {% endblock %} {% endblock %}
+<script type="text/javascript" src="/static/js/action.js"></script>
+{% block analysisScript %} {% endblock %} {% endblock %}
