--- a/templates/form.html
+++ b/templates/form.html
@@ -63,16 +63,16 @@ endblock %} {% block content %}
       <form class="form">
         <div class="justify-content-center displays tab-select mt-4">
           <label
+            class="btn btn-outline m-3"
+            for="display-weights"
+            data-control="weights"
+            >Result</label
+          >
+          <label
             class="btn btn-outline selected m-3"
             for="display-visual"
             data-control="visual"
             >Visualization</label
-          >
-          <label
-            class="btn btn-outline m-3"
-            for="display-weights"
-            data-control="weights"
-            >Weights</label
           >
           <div class="d-none tab-radios">
             <input
