--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 		  <h2 class="bottom-border">Select a task</h2>
 		</header>
 	<div class="container">
-		<div class="row justify-content-around task-options">
-			<div class="col-4 py-3">
+		<div class="row justify-content-around align-items-center task-options">
+			<div class="col-12 col-sm-8 col-md-5 col-lg-4 py-3">
 				<a href="upload">
 				<div class="single-feature text-center">
 				  <div class="feature-icon">
@@ -23,7 +23,7 @@
 				</div>
 				</a>
 			</div>
-			<div class="col-4 py-3">
+			<div class="col-12 col-sm-8 col-md-5 col-lg-4 py-3">
 				<a href="dpml">
 				<div class="single-feature text-center">
 				  <div class="feature-icon">
