--- a/templates/upload.html
+++ b/templates/upload.html
@@ -98,110 +98,73 @@
   <header class="section-header">
     <h6>Parameters</h6>
   </header>
-  <div>
-    <div class="form-row align-items-center my-3" data-hide="">
-      <div class="col-auto">
-        <div class="input-group parameter-input">
-          <div class="input-group-prepend">
-            <label for="epsilon" class="input-group-text">Epsilon</label>
-          </div>
-          <input
-            type="number"
-            class="form-control range-value"
-            id="epsilon"
-            min="0"
-            max="100"
-            placeholder="0"
-            step="0.001"
-            data-inclusive-min="False"
-            required
-            data-toggle="tooltip"
-            data-trigger="manual"
-            data-placement="top"
-            data-title="Epsilon cannot be 0!"
-          />
+  <div class="row align-items-center justify-content-around">
+    <div class="col-auto my-3" data-hide="">
+      <div class="input-group parameter-input">
+        <div class="input-group-prepend">
+          <label for="epsilon" class="input-group-text">Epsilon</label>
         </div>
+        <input
+          type="number"
+          class="form-control"
+          id="epsilon"
+          min="0"
+          max="100"
+          placeholder="0"
+          step="0.001"
+          data-inclusive-min="False"
+          required
+          data-toggle="tooltip"
+          data-trigger="manual"
+          data-placement="top"
+          data-title="Epsilon cannot be 0!"
+        />
       </div>
-      <input
-        type="range"
-        class="custom-range col"
-        min="0"
-        max="100"
-        step="0.5"
-        id="epsilon-range"
-        value="0"
-      />
+    </div>
+    <div class="col-auto my-3" data-hide="laplace staircase median">
+      <div class="input-group parameter-input">
+        <div class="input-group-prepend">
+          <label for="delta" class="input-group-text">Delta</label>
+        </div>
+        <input
+          type="number"
+          class="form-control"
+          id="delta"
+          min="0"
+          max="10"
+          data-order-magnitude="-4"
+          placeholder="0"
+          step="0.1"
+          style="border-right: none;"
+          data-inclusive-min="False"
+          reqiured
+          data-toggle="tooltip"
+          data-trigger="manual"
+          data-placement="top"
+          data-title="Delta cannot be 0!"
+        />
+        <div class="input-group-append">&times;10<sup>-4</sup></div>
+      </div>
     </div>
     <div
-      class="form-row align-items-center my-3"
-      data-hide="laplace staircase median"
-    >
-      <div class="col-auto">
-        <div class="input-group parameter-input">
-          <div class="input-group-prepend">
-            <label for="delta" class="input-group-text">Delta</label>
-          </div>
-          <input
-            type="number"
-            class="form-control range-value"
-            id="delta"
-            min="0"
-            max="10"
-            data-order-magnitude="-4"
-            placeholder="0"
-            step="0.1"
-            style="border-right: none;"
-            data-inclusive-min="False"
-            reqiured
-            data-toggle="tooltip"
-            data-trigger="manual"
-            data-placement="top"
-            data-title="Delta cannot be 0!"
-          />
-          <div class="input-group-append">&times;10<sup>-4</sup></div>
-        </div>
-      </div>
-      <input
-        type="range"
-        class="custom-range col"
-        min="0"
-        max="10"
-        step="0.1"
-        data-order-magnitude="-4"
-        id="delta-range"
-        value="0"
-      />
-    </div>
-    <div
-      class="form-row align-items-center my-3"
+      class="col-auto my-3"
       data-hide="laplace boundedLaplace gaussian median"
     >
-      <div class="col-auto">
-        <div class="input-group parameter-input">
-          <div class="input-group-prepend">
-            <label for="gamma" class="input-group-text">Gamma</label>
-          </div>
-          <input
-            type="number"
-            class="form-control range-value"
-            id="gamma"
-            min="0"
-            max="1"
-            placeholder="0"
-            step="0.01"
-            required
-          />
+      <div class="input-group parameter-input">
+        <div class="input-group-prepend">
+          <label for="gamma" class="input-group-text">Gamma</label>
         </div>
+        <input
+          type="number"
+          class="form-control"
+          id="gamma"
+          min="0"
+          max="1"
+          placeholder="0"
+          step="0.01"
+          required
+        />
       </div>
-      <input
-        type="range"
-        class="custom-range col"
-        min="0"
-        max="1"
-        step="0.01"
-        id="gamma-range"
-        value="0"
-      />
     </div>
   </div>
 </section>
@@ -210,9 +173,10 @@
     <h6>SeLect Field</h6>
   </header>
   <div>
-    <div class="d-flex justify-content-center fields flex-wrap tab-select">
-      <div class="d-none tab-radios"></div>
-    </div>
+    <div
+      class="d-flex justify-content-center fields flex-wrap tab-select"
+      data-childType="radio"
+    ></div>
   </div>
 </section>
 <section class="parameter-section" id="global-sensitivity">
