--- a/templates/upload.html
+++ b/templates/upload.html
@@ -176,6 +176,7 @@
     <div
       class="d-flex justify-content-center fields flex-wrap tab-select"
       data-childType="radio"
+      data-type="x"
     ></div>
   </div>
 </section>
