--- a/static/css/style.css
+++ b/static/css/style.css
@@ -456,6 +456,10 @@ section.home-features {
   margin: 5px;
   border: 1px solid #555;
 }
+.upload-form .tab-select label.btn.disabled {
+  pointer-events: unset;
+  cursor: default;
+}
 .tab-select label.btn:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
@@ -692,4 +696,16 @@ section.home-features {
 .upload-form.was-validated .form-control:valid {
   background: white;
   padding: 0.375rem 0.75rem;
+}
+
+.bounds-table input {
+  max-width: 135px;
+}
+.sub-section-header {
+  text-align: center;
+  font-weight: 500;
+  color: #555;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  margin-top: 20px;
 }
